--- a/AstroTracker/index.html
+++ b/AstroTracker/index.html
@@ -4,12 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AstroTracker</title>
+    <title>Astro Tracker</title>
+    <!-- <link id="theme-link" rel="stylesheet" href="/themes/aura-light-green/theme.css"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=MuseoModerno:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <!-- <style>
+      body {
+        font-family: 'Inter', sans-serif;
+      }
+  
+      h1, h2 {
+        font-family: 'MuseoModerno', sans-serif;
+      }
+    </style> -->
   </head>
   <body>
+    <h1>Heading with MuseoModerno</h1>
+    <p>Paragraph with Inter</p>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
